# cs-template

./: README.md  README.template.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: sphinx.yml
docs/: conf.py  index.rst
