[tool.poetry]
name = "csp"
version = "0.0.0"
description = "My CSP classwork."
authors = ["lishaduck <88557639+lishaduck@users.noreply.github.com>"] # Change this to your GitHub credentials
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
art = "^6.0"
httplib2 = "^0.21.0"
cirq = "^1.0.0"

# chardet = "5.0.0"
# lxml = "^4.9"
# mypy = "^0.990"
# mypy-exensions = "^0.4.3"
# typing-extensions = "^4.4.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
pytest = "^7.2.0"
pylint-pytest = "^1.1.2"
black = "22.10.0"
isort = "5.10.1"
pytest-cache = "^1.0"
pytest-subtests = "^0.9.0"
pytest-black = "^0.3.12"
bandit = "^1.7.4"
pydocstringformatter = "0.7.2"
pyupgrade = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.main]

# List of plugins (as comma separated values of python module names) to load,
# usually to register additional checkers.
load-plugins = [
  "pylint.extensions.docparams",
  "pylint.extensions.mccabe",
  "pylint.extensions.docstyle",
  "pylint.extensions.code_style",
  "pylint.extensions.typing",
  "pylint.extensions.bad_builtin",
]


# Minimum Python version to use for version dependent checks. Will default to the
# version used to run pylint.
py-version = "3.10"


[tool.black]
line-length = 88
preview = false


[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true


[tool.pytest.ini_options]
